--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,46 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+
+    margin: 0px;
+    padding: 0px;
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App{
+
+    margin: 10px;
+
+}
+
+.App #todo-list{
+
+    margin: 10px;
+
+
+}
+
+.App #todo-list h1{
+
+    margin: 10px 10px 20px 10px;
+    text-align: center;
+    font-size: 3em;
+    font-family: georgia;
+    color: rgb(22, 173, 238);
+
+}
+
+.App #todo-list #todos{
+
+    margin: 10px;
+
+}
+
+.App #todo-list #todos .list{
+
+    margin: 10px auto;
+    width: 960px;
+    padding: 10px;
+    border: 1px solid grey;
+    font-family: arial;
+    cursor: pointer;
+
 }
